<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp"
    android:id="@+id/relative_layout">

    <ImageView
        android:id="@+id/imageView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_employee"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView_profile"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_toLeftOf="@+id/img_more"
        android:id="@+id/linear_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_emp_id"
            android:text="id"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            android:text="@string/emp_name"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_age"
            android:text="@string/age"
            android:layout_weight="1"
            android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_salary"
        android:text="@string/salary"
        android:layout_weight="1"
        android:gravity="center"/>
</LinearLayout>
    <ImageView
        android:id="@+id/img_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/bg_coolr"
        android:layout_below="@+id/linear_layout"/>


</RelativeLayout>