<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guideline">

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="116.3dp"
            android:layout_height="116.3dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/emp_icon" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ddddde"
        android:lineSpacingExtra="3sp"
        android:nextFocusDown="@+id/edt_salary"
        android:singleLine="true"
        android:maxLength="50"
        android:textSize="16sp"
        android:hint="@string/emp_name"
        app:layout_constraintTop_toTopOf="@+id/second_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

        <EditText
            android:id="@+id/edt_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ddddde"
            android:inputType="number"
            android:digits="0123456789"
            android:lineSpacingExtra="3sp"
            android:singleLine="true"
            android:nextFocusDown="@+id/mobile_number_profile"
            android:hint="@string/salary"
            app:layout_constraintTop_toTopOf="@+id/third_guideline"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fourth_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />
        <EditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ddddde"
            android:digits="0123456789"
            android:inputType="number"
            android:hint="@string/age"
            android:lineSpacingExtra="3sp"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="@+id/fourth_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seventh_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.717" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@color/bg_coolr"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seventh_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>